@@ -41,7 +41,5 @@ Modules/Setup.local
 Modules/config.c
 Parser/pgen
 Lib/plat-mac/errors.rsrc.df.rsrc
-Lib/lib2to3/Grammar2.6.0.alpha.1.pickle
-Lib/lib2to3/Grammar2.6.0.alpha.2.pickle
-Lib/lib2to3/PatternGrammar2.6.0.alpha.1.pickle
-Lib/lib2to3/PatternGrammar2.6.0.alpha.2.pickle
+Lib/lib2to3/Grammar*.pickle
+Lib/lib2to3/PatternGrammar*.pickle
